# Mandelbrot

./: .clang-format  .gitignore  CMakeLists.txt  Main.c  Main.cpp  REDME.md
